force-app/main/default/objects/Carteira__c/fields/Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Colaborador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Carteiras</relationshipLabel>
    <relationshipName>Carteiras</relationshipName>
    <type>Lookup</type>
</CustomField>