force-app/main/default/objects/Carteira__c/fields/Hospcoins__c.field-meta.xml
<CustomField>
    <fullName>Hospcoins__c</fullName>
    <label>Hospcoins</label>
    <summaryForeignKey>Hospcoin__c.Carteira__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>