force-app/main/default/objects/Carteira__c/fields/Nome_completo__c.field-meta.xml
<CustomField>
    <fullName>Nome_completo__c</fullName>
    <formula>Colaborador__r.FirstName + &apos; &apos; + Colaborador__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome completo</label>
    <type>Text</type>
</CustomField>