force-app/main/default/objects/Carteira__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Saldo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>