force-app/main/default/objects/Carteira__c/validationRules/Bloquea_registro.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquea_registro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR(
        ISCHANGED(Carteira_Ativa__c),
        ISCHANGED(Colaborador__c),
        ISCHANGED(CurrencyIsoCode),
        ISCHANGED(Name)
        

    )
)</errorConditionFormula>
    <errorMessage>Operação invalida</errorMessage>
</ValidationRule>