force-app/main/default/objects/Carteira__c/validationRules/Somente_o_RH_pode_alterar_o_saldo.validationRule-meta.xml
<ValidationRule>
    <fullName>Somente_o_RH_pode_alterar_o_saldo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(Saldo__c),
    NOT(
        OR(
            $User.Id = &quot;005U4000003S8x0&quot;,
            $User.Id = &quot;0056e00000CnqTC&quot;,
            $User.Id = &quot;005U4000002aDC5&quot;
        )
    )
)</errorConditionFormula>
    <errorMessage>Operação invalida</errorMessage>
</ValidationRule>