force-app/main/default/objects/Carteira__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Colaborador__c</columns>
    <columns>Carteira_Ativa__c</columns>
    <columns>Saldo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>pt_BR</language>
</ListView>